# FMS

./: .coverage  .djlintrc  .gitignore  main.py  manage.py  package.json  pyproject.toml  pyrightconfig.json  pytest.ini
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
static/css/: input.css
static/js/: htmx.min.js
templates/: base.html
templates/dashboard/: _dispatcher_dashboard.html  _tracker_dashboard.html  dashboard.html
templates/partials/: header.html  sidebar.html
templates/registration/: login.html
tests/: __init__.py  conftest.py  test_forms.py  test_models.py  test_views.py  test_workflows.py
tms/: admin.py  context_processors.py  factories.py  forms.py  models.py  models_old.py  urls.py  views.py
tms/management/commands/: seed_demo.py  (+1 more)
tms/migrations/: 0001_initial.py  0002_remove_load_delivery_date_remove_load_delivery_time_and_more.py  0002_remove_loadstop_special_instructions.py  0003_alter_accessorial_amount_and_more.py  0003_remove_loadstop_pieces_and_more.py  0004_remove_document_is_required_for_completion.py  0005_remove_appointment_created_by_and_more.py  0006_remove_trackingupdate_broker_notified_and_more.py  0007_alter_trackingupdate_options_and_more.py  0008_alter_reschedulerequest_options_and_more.py  0009_remove_accessorial_approval_status.py  0010_remove_layoverdetail_accessorial_and_more.py  0011_remove_dutylog_duration_dutylog_truck_and_more.py  0012_alter_load_status.py
tms/policies/: load_actions.py  navigation.py  roles.py
tms/services/: duty_logs.py  exceptions.py  hos.py  load_creation.py
tms/templatetags/: form_filters.py
(+21 files in other folders)
